tests/cases/e18-sayi-tasmasi.expected
# exit: 65
[Syntax Error] line 1, column 5: number too large: 999999999999999999999999999999 (64-bit integer limit exceeded)
1 syntax error(s) found; the program was not run.
