tests/cases/e18-sayi-tasmasi.lm
say 999999999999999999999999999999
